# ocr-flash

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  model_manifest.toml  release-please-config.json
.github/workflows/: release.yml
config/: default.toml
scripts/: package-appimage.sh
src/docs/: SRS_ARQUITECTURA_OCR_SYSTEM.md
src/reconstructor-app/: Cargo.toml
src/reconstructor-app/src/: error.rs  events.rs  job.rs  lib.rs  orchestrator.rs  threading.rs
src/reconstructor-domain/: Cargo.toml
src/reconstructor-domain/src/: bbox.rs  block_type.rs  config.rs  document.rs  error.rs  eval.rs  lib.rs  metrics.rs  region.rs  report.rs  resolved.rs
src/reconstructor-domain/src/fsm/: block.rs  document.rs  history.rs  mod.rs  page.rs  transition.rs
src/reconstructor-domain/src/services/: confidence.rs  mod.rs  resolver_selection.rs
src/reconstructor-domain/src/traits/: composer.rs  layout.rs  mod.rs  model_provider.rs  orientation.rs  output.rs  resolver.rs
src/reconstructor-infra/: Cargo.toml
src/reconstructor-infra/benches/: pipeline_bench.rs
src/reconstructor-infra/src/: error.rs  lib.rs  ort_session.rs
src/reconstructor-infra/src/composer/: mod.rs  printpdf_composer.rs
src/reconstructor-infra/src/fallback/: mod.rs  raster_fallback.rs
src/reconstructor-infra/src/input/: image_reader.rs  mod.rs  pdfium_reader.rs
src/reconstructor-infra/src/layout/: doclayout_yolo.rs  mod.rs
src/reconstructor-infra/src/models/: manifest.rs  mod.rs  provider.rs
src/reconstructor-infra/src/ocr/: mod.rs  paddle_ocr.rs
src/reconstructor-infra/src/orientation/: mod.rs  onnx_corrector.rs  onnx_textline_corrector.rs
src/reconstructor-infra/src/output/: json_generator.rs  mod.rs  pdf_generator.rs  txt_generator.rs
src/reconstructor-infra/src/table/: mod.rs  slanet_resolver.rs
src/reconstructor-ui/: Cargo.toml
src/reconstructor-ui/src/: cli.rs  compose.rs  events.rs  main.rs  paths.rs
src/reconstructor-ui/src/gui/: app_state.rs  config_store.rs  downloader.rs  main_gui.rs  model_checker.rs  processor.rs
src/reconstructor-ui/tests/: cli_integration.rs  pipeline_integration.rs  snapshot_tests.rs
src/reconstructor-ui/tests/fixtures/golden/: 3_paginas_2_regiones.json  imagen_pequena_100x100.json  pagina_apaisada_4_regiones.json  pagina_blanca_1_region.json  pagina_blanca_3_regiones.json
src/reconstructor-ui/ui/: app.slint
