[package]
name = "reconstructor-domain"
description = "Anillos 1+2: Entidades de dominio, traits (ports) y domain services del sistema OCR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
