[package]
name = "reconstructor-infra"
description = "Anillo 4: Infrastructure Adapters — implementaciones ONNX, PDF, I/O"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false

[dependencies]
reconstructor-domain = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
printpdf = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
pdfium-render = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
reconstructor-app = { workspace = true }
