[package]
name = "reconstructor-ui"
description = "Anillo 4 + Composition Root: Slint UI y ensamblaje del sistema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "reconstructor"
path = "src/main.rs"

[[bin]]
name = "reconstructor-gui"
path = "src/gui/main_gui.rs"

[dependencies]
reconstructor-domain = { workspace = true }
reconstructor-app = { workspace = true }
reconstructor-infra = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
slint = { workspace = true }
rfd = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
