[package]
name = "reconstructor-ui"
description = "Motor de reconstrucción documental de alto rendimiento"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata.deb]
name = "ocr-flash"
maintainer = "boniche"
copyright = "2026, boniche"
license-file = ["../../README.md", "0"]
depends = "$auto, libfontconfig1, libxkbcommon0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/reconstructor-gui", "usr/bin/ocr-flash-gui", "755"],
    ["target/release/reconstructor", "usr/bin/ocr-flash", "755"],
    ["../../model_manifest.toml", "etc/ocr-flash/model_manifest.toml", "644"],
    ["../../config/default.toml", "etc/ocr-flash/default.toml", "644"],
]

[[bin]]
name = "reconstructor"
path = "src/main.rs"

[[bin]]
name = "reconstructor-gui"
path = "src/gui/main_gui.rs"

[dependencies]
reconstructor-domain = { workspace = true }
reconstructor-app = { workspace = true }
reconstructor-infra = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
slint = { workspace = true }
rfd = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
